--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: GxE2 Lab 
+title: GxE Lab 
 email: hong_zhang@lzu.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
-  Functional Genomics and Evolutionary Ecology Group at Institute of Innovation Ecology,
-  Lanzhou University
+  Functional Genomics x Evolutionary Ecology Lab, College of Ecology, Lanzhou University
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
